# family-chat-archiver

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  README.md  daily_tip_prompt.txt  schema.sql
python/: .env.example  CLAUDE.md  bot.py  config.py  daily_tip.py  db.py  generate_tip.py  media_storage.py  requirements.txt  spelling.py
rust/: .env.example  CLAUDE.md  Cargo.toml
rust/src/: config.rs  daily_tip.rs  error.rs  main.rs  media_storage.rs
rust/src/db/: mod.rs  models.rs  pool.rs
rust/src/processors/: media.rs  message.rs  mod.rs  spelling.rs
web/: .env.example  CLAUDE.md  app.py  config.py  db.py  requirements.txt  telegram.py
web-php/: .env.example  CLAUDE.md  serve.php
web-php/public/: index.php
web-php/public/static/: app.js
web-php/src/: Config.php  Db.php  Telegram.php  helpers.php
web-php/templates/: base.php  corrections.php  index.php  message.php  stats.php  tips.php  users.php
web/static/: style.css
web/templates/: base.html  corrections.html  index.html  message.html  stats.html  tips.html  users.html
