[package]
name = "family-chat-archiver"
version = "0.9.6"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
mysql = "25.0"
mysql_common = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"

[[bin]]
name = "family-chat-archiver"
path = "src/main.rs"
